將直接取DB改為Service處理並使用DI

--- a/Homework/Views/Home/_BlogPostPartialView.cshtml
+++ b/Homework/Views/Home/_BlogPostPartialView.cshtml
@@ -12,7 +12,7 @@
             <a href="#" class="btn btn-primary">Read More &rarr;</a>
         </div>
         <div class="card-footer text-muted">
-            Posted on @articles.CreateDate.ToUsDateString("D")) by
+            Posted on @articles.CreateDate.ToUsDateString("D") by
             <a href="#">Start Bootstrap</a>
         </div>
     </div>
