--- a/Homework/Views/Shared/_Layout.cshtml
+++ b/Homework/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/jquery/dist/pagination.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.twbsPagination.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
