--- a/Homework/Views/Shared/_Layout.cshtml
+++ b/Homework/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@addTagHelper*,Homework
+<!DOCTYPE html>
 <html lang="zh-tw">
 <head>
     <meta charset="utf-8" />
@@ -44,18 +45,7 @@
             </div>
             <div class="col-md-4">
                 <!-- Search Widget -->
-                <div class="card my-4">
-                    <h5 class="card-header">Search</h5>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button">Go!</button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-
+                <vc:search></vc:search>
                 <!-- Categories Widget -->
                 <div class="card my-4">
                     <h5 class="card-header">Categories</h5>
